--- a/2. Student Report Card/style.css
+++ b/2. Student Report Card/style.css
@@ -56,6 +56,7 @@ label{
    border-radius: 0.5rem;
    background-color: rgb(226, 109, 42);
    border: none;
+   color: #fafafa ;
 }
 .info-grp{
     display: flex;
@@ -101,4 +102,13 @@ td{
 .subjects{
     text-align: left;
     padding: 0 80px 0 16px!important;
+}
+.link{
+    text-decoration: none ;
+    color: #fafafa ;
+}
+.roll-err{
+    font-family: 'Roboto';
+    color: #f12b2b;
+    font-size: 18px;
 }
